# silent-drift-sentinel

./: .env.example  .gitignore  CLAUDE.md  NOTICE  README.md
.github/workflows/: ci.yml  uptime.yml
apps/mobile/: App.tsx  README.md  app.json  package-lock.json  package.json
apps/web/: package.json  playwright.config.ts  pnpm-lock.yaml
apps/web/e2e/: hero.spec.ts
apps/web/e2e/fixtures/: drift.json  lineage.json  model-card.json
apps/web/public/: sw.js
apps/web/src/app/: CinematicScroll.tsx  DriftField.tsx  LineageSphere.tsx  ServiceWorker.tsx  SmoothScroll.tsx  globals.css  layout.tsx  manifest.ts  page.tsx
apps/web/src/app/dashboard/: DriftChart.tsx  LineageGraph.tsx  PulseEdge.tsx  lib.ts  page.tsx
apps/web/src/app/how-it-works/: page.tsx
datahub/: ruff.toml
datahub/emit/: emit_lineage.py  verify_lineage.py
datahub/scripts/: day_one_checklist.py  inspect_emit.py  inspect_sdk.py  lineage_probe.py
examples/: README.md  drift_causation.txt  eval_report.json  incident.json  proposed_fix.md  run_trace.json  sample_rca.md
ml/: pyproject.toml
ml/artifacts/: drift_chart.json  drift_chart_benign.json  drift_chart_default.json  drift_signal.json  drift_signal_benign.json  drift_signal_default.json  eval_report.json  feature_metadata.json  metrics.json
ml/scripts/: fetch_data.py  run_drift.py  run_eval.py
ml/sentinel_ml/: __init__.py  data.py  drift.py  eval.py  metrics.py  train.py
ml/tests/: test_drift.py  test_eval.py  test_metrics.py
services/agent/: pyproject.toml
services/agent/scripts/: run_once.py  test_ack.py
services/agent/sentinel_agent/: __init__.py  app.py  config.py  datahub_io.py  demo.py  fixgen.py  graph.py  llm.py  nodes.py  state.py  writeback.py
services/agent/tests/: conftest.py  test_ack_context.py  test_agentic.py  test_fixgen.py  test_recall.py  test_writeback.py
