[project]
name = "sentinel-ml"
version = "0.1.0"
description = "Silent-Drift Sentinel ML core: calibrated LightGBM monitored model + drift detection"
requires-python = ">=3.11,<3.13"
dependencies = [
    "lightgbm>=4.5",
    "scikit-learn>=1.6",
    "pandas>=2.2",
    "numpy>=1.26,<2.3",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "ucimlrepo>=0.0.7",
    "joblib>=1.3",
    "pyarrow>=15",
]

[project.optional-dependencies]
drift = ["nannyml>=0.12"]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel_ml"]

[tool.ruff]
line-length = 100
target-version = "py311"
