[project]
name = "sentinel-agent"
version = "0.1.0"
description = "Silent-Drift Sentinel LangGraph agent: detect, traverse, root-cause, write-back"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.2",
    "acryl-datahub>=1.6",
    "datahub-agent-context>=1.6",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
